config/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:    
    kubernetes.io/ingress.class: addon-http-application-routing
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rps: "100"
spec:
  tls:
  - hosts:
    - janblaha.net
    secretName: tls-secret
  rules:
  - host: janblaha.net
    http:  
      paths:
      - path: /
        backend:
          serviceName: janblaha
          servicePort: 1000    
  - host: staging.janblaha.net
    http:  
      paths:
      - path: /
        backend:
          serviceName: janblaha-staging
          servicePort: 1000
